# UG-BOOM

./: README.md  com.chardson.ug_boom.json  meson.build
data/: com.chardson.ug_boom.appdata.xml.in  com.chardson.ug_boom.desktop.in  com.chardson.ug_boom.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  ug_boom.gresource.xml  ug_boom.in  window.py  window.ui
